unix/lang/tests/error/explicit_error_in_subr.yab
#expect#---Error: foo
#expect#---Dump: sub foo() called in explicit_error_in_subr.yab,5
#expect#---Error: Program stopped due to an error

foo()

sub foo()
  error "foo"
end sub

